# CV

./: .gitattributes  README.md
app/assignment/: 1.histogram_equalization.cpp  3.image_stitching.cpp  term_project.docx
app/assignment/2.Image segmentation/: CMakeLists.txt  main.cpp
app/assignment/term_project/: CMakeLists.txt  circle_detection.cpp  circle_detection.py
app/hello/bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello.sln  hello.vcxproj  hello.vcxproj.filters
app/hello/bld/hello.dir/Release/hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  hello.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/hello/bld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app/hello/src/: CMakeLists.txt  main.cpp
app/lab 10/: lab 10_1.py  lab 10_2.py  lab 10_3.py
app/lab01/bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_opencv.sln  basic_opencv.vcxproj  basic_opencv.vcxproj.filters  cmake_install.cmake
app/lab01/bld/basic_opencv.dir/Release/basic_opencv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  basic_opencv.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/lab01/bld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app/lab01/src/: CMakeLists.txt  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  main.cpp
app/lab02/bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_image_processing.sln  basic_image_processing.vcxproj  basic_image_processing.vcxproj.filters  cmake_install.cmake
app/lab02/bld/basic_image_processing.dir/Release/basic_im.29096D39.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  basic_image_processing.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/lab02/bld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app/lab02/src/: CMakeLists.txt  dissolve.py  main.cpp  morph.py  otsu.py  trackbar.py
app/lab03/src/: CMakeLists.txt  k-means_rgb.cpp  k-means_xyrgb.cpp  k_means_rgb.py  k_means_xyrgb.py  mean_shift.cpp  mean_shift.py
app/lab04_edge_detection/src/: CMakeLists.txt  edge_detection.py  main.cpp
app/lab04_image_filtering/src/: CMakeLists.txt  image_filtering.py  main.cpp
app/lab05/src/: CMakeLists.txt  harris_corner.cpp  harris_corner.py  hough_circle.cpp  hough_circle.py  hough_line.cpp  hough_line.py
app/lab08/bld/: 2018_CV.sln  2018_CV.vcxproj  2018_CV.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
app/lab08/bld/2018_CV.dir/Release/2018_CV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/lab08/bld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app/lab08/data/: train_centers.txt
app/lab08/src/: CMakeLists.txt  inu_generalized_hough_transform.cpp  inu_generalized_hough_transform.h  inu_object_identification.cpp  inu_object_identification.h  inu_object_info.h  main.cpp
app/lab09/bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  face.vcxproj  face.vcxproj.filters  pedestrian.vcxproj  pedestrian.vcxproj.filters  text.sln  text.vcxproj  text.vcxproj.filters
app/lab09/bld/face.dir/Release/face.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/lab09/bld/pedestrian.dir/Release/pedestrian.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pedestrian.lastbuildstate
app/lab09/bld/text.dir/Release/text.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/lab09/bld/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
app/lab09/src/: CMakeLists.txt  face_detection.cpp  face_detection.py  pedestrian_detection.cpp  pedestrian_detection.py  text_detection.cpp  text_detection.py
